@@ -216,6 +216,7 @@ PHP if you have not done so prior to upgrading MediaWiki.
 * (bug 27587) list=filearchive now outputs full title info
 * (bug 27018) Added action=filerevert to revert files to an old version
 * (bug 27897) list=allusers and list=users list hidden users
+* (bug 27717) API's exturlusage module does not respect $wgMiserMode
 
 === Languages updated in 1.18 ===
 
